2012-02-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, test/Makefile.am,
	  test/TestProviders/tests/IndRetryTest.sh,
	  test/TestProviders/tests/Makefile.am,
	  test/TestProviders/tests/xmltest.sh,
	  test/commands/Makefile.am, test/commands/sfcbdump.sh,
	  test/unittest/Makefile.am, test/xmltest/Makefile.am,
	  test/xmltest/xmltest.sh:
	[ 3495789 ] Makefile improvements for test suite
	(code by Viktor Mihajlovski)

2012-02-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcbsem.c, Makefile.am:
	[ 3493493 ] Add sfcbsem
	(code by Viktor Mihajlovski)

	* interopServerProvider.c
	[ 3416164 ] Don't write CIM_IndicationService to disk

2012-02-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, sfcb.cfg.pre.in
	[ 3484025 ] Disable indication sequencing

	* mlog.c: 
	[ 3487675 ] Log message troubles with \n

	* mlog.c, mlog.h, cimcClientSfcbLocal.c, sfcBroker.c, sfcbinst2mof.c: 
	[ 3488688 ] Don't spawn logger for clients 

2012-01-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, indRetryTest.sh
	[ 3478933 ] Sequence Number reset issues

2012-01-25 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c
	[ 3478930 ] Handle SIGPIPE in providerMgr

2011-12-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/SAE*
	[ 3433733 ] CreationClassNames should be supplied 
	test case issues

2011-11-30 Narasimha Sharoff <nsharoff@us.ibm.com>

	* cimRequest.c, cimXmlGen.c, cimXmlGen.h, cimXmlOps.y
	[ 3446179 ] Add a feature to validate CMPI types

2011-11-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, instance.c, instance.h:
	[ 3433733 ] CreationClassNames should be supplied 

2011-11-22 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c, control.c, httpAdapter.c, sfcb.cfg.pre.in:
	[ 3435778 ] Preserve leading/trailing whitespace in values
