@@ -1,5 +1,8 @@
 2012-02-29  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
+	* msgqueue.h, msgqueue.c, cimXmlGen.h:
+	[ 3495804 ] Cleanup: httpProcId still defined, wrong define in cimXmlGen
+
 	* Makefile.am, test/Makefile.am,
 	  test/TestProviders/tests/IndRetryTest.sh,
 	  test/TestProviders/tests/Makefile.am,
